--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/home.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/home.html
@@ -1,20 +1,22 @@
-﻿<center class=" w3-animate-bottom">
-    <form class="w3-center w3-row w3-padding-16 w3-round" style="background-color:white;width:40%;margin-top:5.5%">
+﻿<center  style="width:100%;display:flex;flex-direction:column;flex-wrap:wrap;justify-content:center;align-items:center">
+    <form class="w3-content w3-round">
         <h3>Where would you like to travel?</h3>
         <h4>Select Country:</h4>
-        <select class="w3-select w3-mobile w3-cell w3-border w3-hover-border-yellow" style="width:42%" ng-disabled="errorMessageDisplay" ng-model="searchCountryID">
+        <select class="w3-select w3-mobile w3-cell w3-border w3-hover-border-yellow" style="width:60%" ng-disabled="errorMessageDisplay" ng-model="searchCountryID">
             <option ng-repeat="country in countries track by $index" ng-value="country.countryID">{{country.countryName}}</option>
         </select>
         <br />
         <br />
-        <h4>Check in:</h4> <input class="w3-input w3-mobile w3-cell w3-hover-border-yellow" style="width:42%" ng-model="searchCheckIn" min="{{fromDate | date:'yyyy-MM-dd'}}" type="date" />
+        <h4>Check in:</h4> <input class="w3-input w3-mobile w3-cell w3-hover-border-yellow" style="width:60%" ng-model="searchCheckIn" min="{{fromDate | date:'yyyy-MM-dd'}}" type="date" />
         <br /><br />
-        <h4>Check Out:</h4><input class="w3-input w3-mobile w3-cell w3-hover-border-yellow" style="width:42%" min="{{searchCheckIn | date:'yyyy-MM-dd'}}" type="date" ng-model="searchCheckOut" />
+        <h4>Check Out:</h4><input class="w3-input w3-mobile w3-cell w3-hover-border-yellow" style="width:60%" min="{{searchCheckIn | date:'yyyy-MM-dd'}}" type="date" ng-model="searchCheckOut" />
         <br />
         <br />
-        <h4>Guests:</h4> <select ng-model="searchGuests" class="w3-select w3-mobile w3-cell w3-border w3-hover-border-yellow" style="width:42%" ng-disabled="errorMessageDisplay">
+        <h4>Guests:</h4> <select ng-model="searchGuests" class="w3-select w3-mobile w3-cell w3-border w3-hover-border-yellow" style="width:60%" ng-disabled="errorMessageDisplay">
             <option class="w3-border-bottom w3-border-blue" ng-repeat="n in [].constructor(20) track by $index" ng-value="$index+1">{{$index+1}}</option>
         </select><br /><br />
         <a class="w3-button w3-purple w3-round w3-hover-blue" style="width:22%" ui-sref="SearchResult({countryID:searchCountryID,fromDate:searchCheckIn.toDateString(),toDate:searchCheckOut.toDateString(),guests:searchGuests})">Send</a>
     </form>
 </center>
+
+<!--class="w3-animate-bottom w3-container w3-mobile"-->
