--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/home.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/home.html
@@ -1,5 +1,5 @@
-﻿<center  style="width:100%;display:flex;flex-direction:column;flex-wrap:wrap;justify-content:center;align-items:center">
-    <form class="w3-content w3-round">
+﻿<center class="w3-animate-bottom"  style="width:100%;display:flex;flex-direction:column;flex-wrap:wrap;justify-content:center;align-items:center">
+    <form class="w3-content w3-round ">
         <h3>Where would you like to travel?</h3>
         <h4>Select Country:</h4>
         <select class="w3-select w3-mobile w3-cell w3-border w3-hover-border-yellow" style="width:60%" ng-disabled="errorMessageDisplay" ng-model="searchCountryID">
