--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/index.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/index.html
@@ -87,14 +87,16 @@
                         <a class="w3-bar-item w3-button w3-hover-blue w3-col " style="padding-top:1.5%;padding-bottom:1.5%" ng-click="$parent.logOut()">logOut</a>
 
                     </div>
-                    <button ng-show="showNav" id="openNavButton" class="w3-button w3-block w3-center w3-hide-large" ng-click="openSideBar()">&#9776;</button>
 
                 </div>
+                    <button style="position:relative" ng-show="showNav" id="openNavButton" class="w3-button w3-block w3-center w3-hide-large" ng-click="openSideBar()">&#9776;</button>
 
 
             </div>
         </div>
-        <ui-view style="width:100%"></ui-view>
+        <ui-view style="width:100%">
+        </ui-view>
+            <img  ng-show="reload" style="position:page;width:90%" src="ApartrentPhotos/loader.gif" />
         <footer class="w3-container w3-tea" style="position:fixed">
             footer
         </footer>
