Adding img support

--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/index.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/index.html
@@ -24,6 +24,7 @@
     <script src="SearchResult/Controller/viewApartmentController.js"></script>
 
     <!--Factories And Services-->
+    <script src="Factories and Services/fileReaderFactory.js"></script>
     <script src="Factories and Services/userProfileFactory.js"></script>
     <script src="Factories and Services/countriesFactory.js"></script>
     <script src="Factories and Services/categoriesFactory.js"></script>
