Images now work in all the app

--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/index.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/index.html
@@ -25,6 +25,7 @@
 
     <!--Factories And Services-->
     <script src="Factories and Services/fileReaderFactory.js"></script>
+    <script src="Factories and Services/imageHandlerFactory.js"></script>
     <script src="Factories and Services/userProfileFactory.js"></script>
     <script src="Factories and Services/countriesFactory.js"></script>
     <script src="Factories and Services/categoriesFactory.js"></script>
