--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/index.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/index.html
@@ -94,13 +94,13 @@
                     </div>
 
                 </div>
-                    <button style="position:relative" ng-show="showNav" id="openNavButton" class="w3-button w3-block w3-center w3-hide-large" ng-click="openSideBar()">&#9776;</button>
+                <button style="position:relative" ng-show="showNav" id="openNavButton" class="w3-button w3-block w3-center w3-hide-large" ng-click="openSideBar()">&#9776;</button>
 
 
             </div>
         </div>
-       <img  ng-show="reload" class="w3-center" style="position:absolute;top:0;" src="ApartrentPhotos/loader.gif" />
-        <ui-view style="width:100%">
+        <div ng-show="reload" class="w3-center w3-white" style="position:fixed;top:0;width:100%;height:100%"><img style="padding-top:20%;" src="ApartrentPhotos/loader.gif" /></div>
+        <ui-view ng-hide="reload" style="width:100%">
         </ui-view>
         <footer class="w3-container w3-tea" style="position:fixed">
             footer
